# neuroimaging-go-brrrr

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARC_METADATA_PARITY_AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TECH_DEBT.md  UPSTREAM_BUG.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/openneuro/: README.md
data/zenodo/: README.md
docs/: TODO.md
docs/brainstorming/: CONTRIBUTING.md  README.md  consolidation-strategy.md
docs/bugs/: ARC_METADATA_PARITY_AUDIT.md  BUG-002-huggingface-upload-timeout.md  BUG-003-huggingface-rate-limit.md  BUG-004-upload-staging-premature-deletion.md  arc-t2w-multi-run-data-loss.md
docs/dataset-cards/: aomic-piop1.md  arc-aphasia-bids.md
docs/explanation/: architecture.md
docs/how-to/: validate-before-upload.md
docs/issues/: 001_soop_ds004889.md  002_atlas_v2.md  003a_aomic_piop1.md  003b_aomic_id1000.md  003c_aomic_piop2.md
docs/reference/: api.md  schema.md
docs/research/: eeg-datasets-catalog.md  eeg-formats-and-standards.md  eeg-foundation-models.md  mne-ecosystem-overview.md  rorden-lab-eeg-landscape.md
docs/specs/: 00-integration-overview.md  01-copy-source.md  02-update-pyproject.md  02b-merge-configs.md  03-copy-tests.md  04-cleanup.md  05-verify.md  README.md  arc-metadata-parity-fixes.md  arc-structural-multi-run-fix.md  arc-t2w-acquisition-type.md  nifti-lazy-loading.md
docs/to_do/: add-t2w-acquisition-validation.md  consumption-pipeline-gap.md
docs/tutorials/: upload-arc.md
docs/upstream/: huggingface-datasets-7894.md
scripts/: download_aomic_piop1.sh  download_arc.sh  download_ds004884.sh  download_isles24.sh  push_to_hub_ds004884_full.py
src/bids_hub/: __init__.py  cli.py
src/bids_hub/core/: __init__.py  builder.py  config.py  utils.py
src/bids_hub/datasets/: __init__.py  aomic_piop1.py  arc.py  isles24.py
src/bids_hub/patches/: __init__.py  nifti_lazy.py
src/bids_hub/validation/: __init__.py  aomic.py  arc.py  base.py  hf.py  isles24.py
tests/: __init__.py  test_aomic_piop1.py  test_arc.py  test_cli_skeleton.py  test_core_nifti.py  test_isles24.py  test_patches.py  test_validation.py
tests/validation/: test_base.py  test_isles24.py
