[project]
name = "neuroimaging-go-brrrr"
version = "0.2.0"
description = "Upload BIDS neuroimaging datasets (ARC, ISLES24) to HuggingFace Hub"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "The-Obstacle-Is-The-Way" },
    { name = "TobiasPitters" },
]
keywords = [
    "bids",
    "nifti",
    "neuroimaging",
    "huggingface",
    "datasets",
    "mri",
    "ct",
    "stroke",
    "aphasia",
    "isles",
    "isles24",
    "perfusion",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "datasets>=3.4.0",
    "hf-xet>=1.0.0",
    "huggingface-hub>=0.32.0",
    "nibabel>=5.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.7.0",
]

[project.scripts]
bids-hub = "bids_hub.cli:app"

[project.urls]
Homepage = "https://github.com/CloseChoice/neuroimaging-go-brrrr"
Repository = "https://github.com/CloseChoice/neuroimaging-go-brrrr"
Issues = "https://github.com/CloseChoice/neuroimaging-go-brrrr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bids_hub"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]
ignore = ["B008"]  # Typer default() false positive

[tool.ruff.lint.isort]
known-first-party = ["bids_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.uv.sources]
# CRITICAL: Pin to specific commit until upstream PR #7896 is merged.
# PyPI stable has embed_table_storage bug causing SIGKILL on Sequence(Nifti()) after ds.shard()
# See UPSTREAM_BUG.md for full details.
datasets = { git = "https://github.com/huggingface/datasets.git", rev = "004a5bf4addd9293d6d40f43360c03c8f7e42b28" }